Align issues on memory view

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -42,6 +42,7 @@ html, body {
 
 .MemoryView {
   margin: var(--default-margin);
+  padding: var(--default-margin);
   max-height: 40vh;
   overflow-y: auto;
   overflow-x: hidden;
