--- a/src/components/Memory/Memory.css
+++ b/src/components/Memory/Memory.css
@@ -1,3 +1,7 @@
+.Memory {
+    text-align: center;
+}
+
 .MemoryList {
     margin: 0;
     padding: 0;
