--- a/src/components/OtherRegisters/OtherRegisters.css
+++ b/src/components/OtherRegisters/OtherRegisters.css
@@ -1,3 +1,7 @@
+.OtherRegisters {
+    text-align: center;
+}
+
 .OtherRegistersList {
     margin: 0;
     padding: 0;
