--- a/src/components/Stack/Stack.css
+++ b/src/components/Stack/Stack.css
@@ -1,3 +1,7 @@
+.Stack {
+    text-align: center;
+}
+
 .StackList {
     margin: 0;
     padding: 0;
