--- a/src/components/VRegisters/VRegisters.css
+++ b/src/components/VRegisters/VRegisters.css
@@ -1,3 +1,7 @@
+.VRegisters {
+    text-align: center;
+}
+
 .RegistersList {
     margin: 0;
     padding: 0;
